# code-vectorization-avs-1

./: .gitignore  .profile  CMakeLists.txt  Dockerfile  MB-xlapes02.txt  MB-xlogin00.txt  advisor.sl  make.sh
calculators/: BaseMandelCalculator.cc  BaseMandelCalculator.h  BatchMandelCalculator.cc  BatchMandelCalculator.h  LineMandelCalculator.cc  LineMandelCalculator.h  RefMandelCalculator.cc
scripts/: compare.py  compare.sh
